arrs/prowlarr/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
  namespace: arr
spec:
  selector:
    matchLabels:
      app: prowlarr 
  template:
    metadata:
      labels:
        app: prowlarr 
    spec:
      containers:
      - name: arr-pod
        image: hotio/prowlarr:testing
        ports:
        - containerPort: 9696
          name: http
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-pvc
