arrs/prowlarr/ingress-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: arr
spec:
  entryPoints:
    - web 
  routes:
    - kind: Rule
      match: Host(`prowlarr.local.net`)
      services:
        - name: prowlarr-svc
          port: 80
